MMA-8353 Refaktor av alle testar
- Bytt ut hamcrest- og jupiter-asserts med assert4j sine